# AI-Feynman

./: README.md  example.ipynb  meson.build  pyproject.toml  setup.py  units.xlsx
aifeynman/: S_run_aifeynman.py  S_symmetry.py  dimensionalAnalysis.py  meson.build  post_install.py  template.sh.in
example_data/: example1.txt_dim_red_variables.txt
results/NN_trained_models/models/: example1.txt_dim_red_train.h5
